fix nav alignment

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -6,10 +6,11 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
 }
 
 nav {
-    width: 99%;
+    width: 96%;
 }
 
 nav li a {
@@ -23,11 +24,25 @@ nav li a {
     margin: 0;
     padding: 0;
     text-align: center;
-    font-size: min(10.636em, 9vw);
+    font-size: 10.636em;
     color: white;
     white-space: nowrap;
 }
 
 .spaceman-large {
     height: 30vh;
+}
+
+@media (max-width: 1300px) {
+    .title {
+        font-size: min(10.636em, 9vw);
+    }
+
+    nav li {
+        font-size: min(3em, 3vw);
+    }
+
+    nav {
+        width: auto;
+    }
 }
